微服务打包修正conf